test(core): 添加核心JWT算法和ECDSA实现的测试覆盖
- 为AbstractJwtAlgo添加全面的单元测试覆盖各种方法
- 实现Algorithm枚举的完整测试验证算法名称和描述
- 扩展EcdsaJwt类的测试覆盖关键功能分支
- 修复并优化密钥仓库初始化逻辑
- 改进密钥轮换过渡期配置处理